--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp>=3.3.2
 aiosocksy>=0.1.1
 arxiv>=0.2.2
 beautifulsoup4>=4.6.0
+facebook-sdk>=3.0.0
 first>=2.0.1
 langdetect>=1.0.7
 multidict>=4.3.1
